--- a/index.html
+++ b/index.html
@@ -6,5 +6,12 @@
        <h1>WELCOME</h1>
       Hello there, awesome person!
       <img src="https://octodex.github.com/images/vinyltocat.png">
-    </body>
-</html>Hello there, awesome person!
+ 
+       <ol>
+    <li>Wikipedia</li>
+    <li>Geeksforgeeks</li>
+    <li>Tutorialspoint</li>
+</ol> 
+       
+   </body>
+</html>
