--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
       <img src="https://octodex.github.com/images/vinyltocat.png">
  
        <ol>
-    <li>Wikipedia</li>
-    <li>Geeksforgeeks</li>
-    <li>Tutorialspoint</li>
+    
+        <li><a href="https://www.wikipedia.org/">Wikipedia</a></li>
+        <li><a href=" https://www.geeksforgeeks.org/">Geeksforgeeks</a></li>
+        <li><a href=" https://www.tutorialspoint.com/index.htm">Tutorialspoint</a></li>
 </ol> 
        
    </body>
