--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
    <head>
        <title> MY NEW WEB PAGE</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
        <h1>WELCOME</h1>
